feat: Complete data integrity fixes and favicon implementation
🎯 Data Integrity Improvements:
- Created 15 missing user profiles with realistic details matching their services
- Fixed 23 name mismatches in service descriptions to match user first names
- Converted 43 float duration values to integers (21 transactions + 22 services)
- Ensured complete user-service relationship integrity

👥 User Data Creation:
- Added diverse user profiles across Technology, Creative, Health, Business, Education categories
- Each user profile includes relevant skills, professional bios, and contact information
- All users start with 10 bank hours, 5.0 rating, and 0 transactions

🔧 Name Consistency Fixes:
- Updated service descriptions to use correct user first names
- Fixed patterns like 'Hi! I'm [WrongName]' to use actual user names
- Handled special cases like 'Dr. Sarah' properly

📊 Duration Value Standardization:
- Transaction.hoursSpent: Float → Integer (21 updates)
- Service.hourlyDuration: Float → Integer (22 updates, 1.5 → 2)
- Used Math.round() for consistent rounding strategy

🎨 Favicon Implementation:
- Created custom favicon based on HourBank logo design
- Includes classical bank building with golden columns and central hourglass
- Multiple formats: SVG (modern browsers), ICO (legacy), Apple touch icon
- Optimized for sizes from 16x16 to 180x180 pixels
- Updated index.html with proper favicon links

📁 New Scripts Added:
- User management: create-missing-users.js, fix-incorrect-user-id.js
- Data validation: check-name-mismatches.js, fix-name-mismatches.js
- Duration fixes: check-all-float-durations.js, fix-float-durations.js
- Favicon tools: setup-favicon.sh, svg-to-ico.js
- Service utilities: check-services-simple.js, check-service-fields.js

📚 Documentation:
- Comprehensive summaries for all major changes
- Favicon creation guide and technical specifications
- User data creation methodology and results
- Float duration fix detailed report

✅ Final Results:
- Total Users: 

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
   <meta name="keywords" content="skill exchange, time banking, community marketplace, services, hourbank, hOurBank">
   
   <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon.svg">
+  
+  <!-- Additional PNG sizes for better compatibility -->
   <link rel="icon" type="image/png" sizes="32x32" href="hb-logo-v1.png">
   <link rel="icon" type="image/png" sizes="16x16" href="hb-logo-v1.png">
-  <link rel="apple-touch-icon" href="hb-logo-v1.png">
-  
-  <!-- Fallback for older browsers -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
