--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -40,7 +40,7 @@
     <h1>Privacy Policy for HourBank</h1>
     
     <div class="last-updated">
-        <strong>Last Updated:</strong> January 25, 2025
+        <strong>Last Updated:</strong> July 25, 2025
     </div>
 
     <h2>1. Introduction</h2>
@@ -209,15 +209,15 @@
     <div class="contact-info">
         <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
         <p>
-            <strong>Email:</strong> <a href="mailto:privacy@hourbank.app">privacy@hourbank.app</a><br>
-            <strong>Support:</strong> <a href="mailto:support@hourbank.app">support@hourbank.app</a><br>
-            <strong>Address:</strong> [Your Business Address]<br>
+            <strong>Email:</strong> <a href="mailto:ramjisreenivasan@gmail.com">ramjisreenivasan@gmail.com</a><br>
+            <strong>Support:</strong> <a href="mailto:ramjisreenivasan@gmail.com">ramjisreenivasan@gmail.com</a><br>
+            <strong>Developer:</strong> Ramji Sreenivasan<br>
             <strong>Response Time:</strong> We aim to respond to all privacy inquiries within 30 days.
         </p>
     </div>
 
     <h2>13. Jurisdiction</h2>
-    <p>This Privacy Policy is governed by the laws of [Your Jurisdiction]. Any disputes arising from this policy will be resolved in the courts of [Your Jurisdiction].</p>
+    <p>This Privacy Policy is governed by the laws of the United States. Any disputes arising from this policy will be resolved in accordance with applicable United States federal and state laws.</p>
 
     <hr>
     <p><em>This Privacy Policy is effective as of the date listed above and applies to all users of the HourBank application and services.</em></p>
