docs: update mobile privacy policy with complete contact information
- Add developer name: Ramji Sreenivasan
- Update email to: ramjisreenivasan@gmail.com
- Add complete mailing address: 13055 Garridan Ave, Windermere, FL 34786, USA
- Set jurisdiction to Florida State law and Orange County courts
- Update all privacy policy formats (markdown, HTML, Play Store text, mobile component)
- Ensure app store compliance with complete contact details
- Maintain individual developer status (not business entity)

Privacy policy now ready for Google Play Store submission with all required legal information.

--- a/mobile-privacy-policy.html
+++ b/mobile-privacy-policy.html
@@ -183,9 +183,17 @@
         <h2>Contact Information</h2>
         <div class="contact-info">
             <p>If you have any questions about this privacy policy or the mobile app, please contact us:</p>
-            <p><strong>Email:</strong> privacy@hourbank.ramjisreenivasan.com<br>
-            <strong>Website:</strong> <a href="https://hourbank.ramjisreenivasan.com/about">https://hourbank.ramjisreenivasan.com/about</a></p>
+            <p><strong>Developer:</strong> Ramji Sreenivasan<br>
+            <strong>Email:</strong> ramjisreenivasan@gmail.com<br>
+            <strong>Website:</strong> <a href="https://hourbank.ramjisreenivasan.com/about">https://hourbank.ramjisreenivasan.com/about</a><br>
+            <strong>Mailing Address:</strong><br>
+            13055 Garridan Ave<br>
+            Windermere, FL 34786<br>
+            United States</p>
         </div>
+
+        <h2>Jurisdiction</h2>
+        <p>This privacy policy is governed by the laws of the State of Florida, United States, and any disputes will be resolved in the courts of Orange County, Florida.</p>
 
         <h2>Key Points Summary</h2>
         <div class="summary-grid">
