Fix mobile navigation display issues
- Updated viewport meta tag with viewport-fit=cover for better mobile support
- Added Ionic CSS CDN link for proper component styling
- Enhanced global styles with comprehensive mobile navigation CSS rules
- Added proper styling for all Ionic components (ion-header, ion-toolbar, ion-menu, etc.)
- Implemented menu backdrop and animation effects
- Added safe area handling for mobile devices
- Updated mobile navigation component with manual menu toggle functionality
- Removed dependency on IonicModule for better compatibility
- Added fallback emoji icons for when Ionicons don't load
- Improved mobile responsive design with dynamic viewport height

Fixes: Navigation items now display properly with styles instead of continuous text

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
   <meta charset="utf-8">
   <title>hOurBank - Time-Based Skill Exchange Platform</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta name="description" content="Exchange skills and services using time as currency. Join hOurBank's community-driven marketplace.">
   <meta name="keywords" content="skill exchange, time banking, community marketplace, services, hourbank, hOurBank">
+  
+  <!-- Ionic CSS for mobile components -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
